# cantonnet-omnichain-sdk

./: .gitignore  CANTON_WALLET_SDK_DEVELOPMENT_PROMPT.md  Cargo.toml  DEVELOPMENT_PROMPT.md  INVESTOR_MEETING_CHEATSHEET.md  LICENSE  PRE_DEVELOPMENT_CHECKLIST.md  README.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
config/: example-production.yaml  example.yaml
crates/canton-core/: Cargo.toml
crates/canton-core/src/: config.rs  error.rs  lib.rs
crates/canton-core/src/traits/: mod.rs  proto.rs
crates/canton-core/src/types/: command.rs  event.rs  filter.rs  identifier.rs  mod.rs  offset.rs  transaction.rs  value.rs
crates/canton-crypto/: Cargo.toml
crates/canton-crypto/src/: keys.rs  lib.rs
crates/canton-crypto/src/keystore/: memory.rs  mod.rs
crates/canton-ledger-api/: Cargo.toml  build.rs
crates/canton-ledger-api/proto/: README.md
crates/canton-ledger-api/proto/google/protobuf/: any.proto  duration.proto  empty.proto  field_mask.proto
crates/canton-ledger-api/proto/google/rpc/: status.proto
crates/canton-ledger-api/src/: client.rs  connection.rs  error.rs  lib.rs  pool.rs  proto.rs  streaming.rs
crates/canton-observability/: Cargo.toml
crates/canton-observability/src/: config.rs  error.rs  health.rs  lib.rs  logging.rs  metrics.rs  tracing.rs
crates/canton-reliability/: Cargo.toml
crates/canton-reliability/src/: lib.rs
crates/canton-transport/: Cargo.toml
crates/canton-transport/src/: lib.rs
crates/canton-wallet/: Cargo.toml
crates/canton-wallet-contracts/: Cargo.toml
crates/canton-wallet-contracts/src/: error.rs  lib.rs  manager.rs
crates/canton-wallet-core/: Cargo.toml
crates/canton-wallet-core/src/: error.rs  lib.rs  traits.rs  types.rs  types_test.rs
crates/canton-wallet-crypto/: Cargo.toml
crates/canton-wallet-crypto/src/: crypto.rs  hd.rs  keystore.rs  lib.rs
crates/canton-wallet-events/: Cargo.toml
crates/canton-wallet-events/src/: error.rs  lib.rs  stream.rs
crates/canton-wallet-omnichain/: Cargo.toml
crates/canton-wallet-omnichain/src/: adapter.rs  adapters.rs  bridge.rs  chain.rs  chain_adapter.rs  config.rs  error.rs  lib.rs  multi_chain.rs  multichain.rs  proof.rs  types.rs  wallet.rs
crates/canton-wallet-recovery/: Cargo.toml
crates/canton-wallet-recovery/src/: backup.rs  error.rs  lib.rs  social_recovery.rs
crates/canton-wallet-security/: Cargo.toml
crates/canton-wallet-security/src/: approval.rs  audit.rs  error.rs  lib.rs  rate_limit.rs  validation.rs
crates/canton-wallet-transactions/: Cargo.toml
crates/canton-wallet-transactions/src/: builder.rs  error.rs  estimator.rs  lib.rs  retry.rs  validator.rs
crates/canton-wallet/src/: derivation.rs  hd_wallet.rs  lib.rs  multi_sig.rs  party_id.rs  recovery.rs  wallet.rs
docs/: CANTON_DEFI_ARCHITECTURE_BEST_PRACTICES.md  DEFI_SDK_EXPERTISE_RESEARCH.md  DEVNET_PARTICIPANT.md  PROMPT_CLEANUP_MACOS.md  README.md  getting_started.md
examples/: basic_wallet.rs
plans/: DEFI_SDK_EXPERTISE_INTEGRATION_PLAN.md
prompts/: DEFI_SDK_MASTER_PROMPT.md
research/: 01-canton-network-architecture.md  02-omnichain-integration-patterns.md  03-rust-sdk-best-practices-2025.md  04-daml-ledger-api.md  05-grpc-protobuf-rust.md  06-cryptographic-requirements.md  07-production-ready-patterns.md  08-sdk-architecture-design.md  09-canton-wallet-evm-integration.md  09-canton-wallet-solutions.md  10-flexible-key-derivation.md  10-wallet-sdk-best-practices.md  11-wallet-security-best-practices.md  12-advanced-wallet-patterns.md  13-canton-wallet-sdk-architecture.md  14-canton-wallet-business-logic.md
