[workspace]
resolver = "2"
members = [
    "crates/canton-wallet",
    "crates/canton-wallet-core",
    "crates/canton-wallet-crypto",
    "crates/canton-ledger-api",
    "crates/canton-wallet-transactions",
    "crates/canton-wallet-contracts",
    "crates/canton-wallet-events",
    "crates/canton-wallet-security",
    "crates/canton-wallet-recovery",
    "crates/canton-wallet-omnichain",
    "crates/canton-observability",
    "crates/canton-reliability",
    "crates/canton-transport",
    "crates/canton-core",
    "crates/canton-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Canton Wallet SDK Contributors"]
license = "Apache-2.0"
repository = "https://github.com/your-org/canton-wallet-sdk"
homepage = "https://github.com/your-org/canton-wallet-sdk"
documentation = "https://docs.rs/canton-wallet-sdk"
keywords = ["canton", "wallet", "blockchain", "daml", "ledger"]
categories = ["api-bindings", "cryptography", "development-tools"]

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.45", features = ["full", "tracing"] }
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"

# gRPC
tonic = { version = "0.13", features = ["tls", "tls-roots", "gzip", "zstd", "channel"] }
tonic-build = "0.13"
prost = "0.14"
prost-types = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry-otlp = "0.27"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["hazmat", "rand_core"] }
x25519-dalek = "2.0"
sha2 = "0.10"
blake3 = "1.5"
aes-gcm = "0.10"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1.8", features = ["derive"] }

# HD Wallets
bip39 = "2.0"
bip32 = "0.5"

# HTTP/TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
hyper = "1.5"
hyper-util = "0.1"
http = "1.2"
http-body = "1.0"
http-body-util = "0.1"

# Utilities
bytes = "1.7"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
dashmap = "6.1"
parking_lot = "0.12"
arc-swap = "1.7"
futures = "0.3"
futures-util = "0.3"
pin-project = "1.1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Decimal arithmetic
rust_decimal = "1.36"

# Base64 encoding
base64 = "0.22"

# Hex encoding
hex = "0.4"

# Derive macros
derive_more = { version = "1.0", features = ["from", "into", "display", "error"] }

# Time handling
time = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "warn"
must_use_candidate = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unimplemented = "warn"
todo = "warn"
unreachable = "warn"
indexing_slicing = "warn"
integer_arithmetic = "warn"
float_arithmetic = "warn"
