[package]
name = "canton-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core types, traits, and errors for Canton OmniChain SDK"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
bytes = "1.7"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
