[package]
name = "canton-ledger-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Canton Wallet SDK Contributors"]
description = "Ledger API integration for Canton Wallet SDK"
license = "Apache-2.0"
repository = "https://github.com/your-org/canton-wallet-sdk"
keywords = ["canton", "ledger", "grpc", "blockchain"]
categories = ["api-bindings", "cryptography"]

[dependencies]
# Core types
canton-wallet-core = { path = "../canton-wallet-core" }

# Async Runtime
tokio = { version = "1.45", features = ["full", "tracing"] }

# gRPC
tonic = { version = "0.13", features = ["tls", "tls-roots", "gzip", "zstd", "channel"] }
prost = "0.14"
prost-types = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"

# HTTP/TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"

# Utilities
bytes = "1.7"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
dashmap = "6.1"
parking_lot = "0.12"
arc-swap = "1.7"

# Configuration
config = "0.14"

# Validation
validator = { version = "0.19", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
rstest = "0.23"
