[package]
name = "canton-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "gRPC transport layer for Canton OmniChain SDK"

[dependencies]
canton-core = { path = "../canton-core" }
tonic = { version = "0.13", features = ["tls-ring", "tls-webpki-roots", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
