[package]
name = "canton-wallet-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and traits for Canton Wallet SDK"

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Async
async-trait = { workspace = true }

# Validation
validator = { workspace = true, features = ["derive"] }

# Derive macros
derive_more = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = "1.5"
rstest = "0.23"
