[package]
name = "canton-wallet-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Cryptographic operations and key management for Canton Wallet SDK"

[dependencies]
# Core types
canton-wallet-core = { path = "../canton-wallet-core" }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Cryptography
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }

# HD Wallets
bip39 = { workspace = true }
bip32 = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
bytes = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = "1.5"
rstest = "0.23"
